# ez-kvstore

./: CMakeLists.txt
cmake/: preconfig.cmake
include/ez/: BufferStream.hpp  KVStatus.hpp  KVStore.hpp  memstream.hpp
include/ez/intern/: KVEntry.hpp  KVGenerators.hpp  KVIterator.hpp
src/: Iterator.cpp  KVGenerators.cpp  KVPrivate.cpp  KVPrivate.hpp  KVStore.cpp  KVStoreValues.cpp  Tables.cpp  Values.cpp  hashing.cpp  hashing.hpp
tests/: CMakeLists.txt  config.hpp.in  read.db3  test.db3  write.db3
tests/basic/: kvstore.cpp  streambuf.cpp
